# acoupipe

./: .buildinfo  .dockerignore  .gitignore  .ruff.toml  .zenodo.json  AUTHORS.md  CITATION.cff  Dockerfile  LICENSE  README.md  README.rst  build_docker.sh  build_docker_image.sh  dtest.sh  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  singularity.def
.github/workflows/: build_and_test.yml  build_docs.yml  checks.yml  docker-image-dev.yml  docker-image.yml  docs.yml  python-app.yml  tests.yml
_sources/autoapi/acoupipe/: index.rst.txt
_sources/contents/: examples.rst.txt  install.rst.txt
_sources/contents/datasets/: docker.rst.txt  features.rst.txt  singularity.rst.txt
_sources/contents/jupyter/: load_h5.ipynb.txt  modify.ipynb.txt
_static/: documentation_options.js
acoupipe/: __init__.py  dataset1.py  dataset2.py  evaluate.py  features.py  filter.py  helper.py  loader.py  pipeline.py  sampler.py  spectra_analytic.py  version.py  writer.py
acoupipe/datasets/: __init__.py  dataset1.py  features.py  helper.py
acoupipe/xml/: tub_vogel64_ap1.xml
app/: main.py  run_docker.sh
autoapi/acoupipe/: index.html
autoapi/acoupipe/config/: index.html
autoapi/acoupipe/datasets/: index.html
autoapi/acoupipe/loader/: index.html
autoapi/acoupipe/pipeline/: index.html
autoapi/acoupipe/sampler/: index.html
autoapi/acoupipe/version/: index.html
autoapi/acoupipe/writer/: index.html
contents/: datasets.html  examples.html  install.html  links.html  lit.html
contents/datasets/: docker.html  features.html  quickstart.html  singularity.html
contents/jupyter/: generate.html  load_h5.html  load_h5.ipynb  load_tfrecord.html  load_tfrecord.ipynb  modify.html
contents/module/: examples.html
dataset/: constants.py  features.py  helper.py  main.py  start_simulation.sh  statistics.py
docs/: .buildinfo  acoupipe.loader.html  acoupipe.pipeline.html  acoupipe.sampler.html  acoupipe.writer.html  genindex.html  index.html  make.bat  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_downloads/43ad4dbd64d54c527e41337467083e6b/: micgeom_sampling_example.py
docs/_sources/: index.rst.txt
docs/_sources/api_ref/: acoupipe.evaluate.rst .txt  acoupipe.pipeline.rst.txt  index_apiref.rst.txt
docs/_sources/contents/: dataset.rst.txt  documentation.rst.txt  example.rst.txt  links.rst.txt
docs/_static/: documentation_options.js
docs/api_ref/: acoupipe.evaluate.html  acoupipe.loader.html  acoupipe.pipeline.html  acoupipe.sampler.html  acoupipe.writer.html  index_apiref.html
docs/contents/: dataset.html  documentation.html  example.html  links.html  literature.html
docs/source/: conf.py  index.rst
docs/source/_build/: index.html  search.html
docs/source/bib/: refs.bib
docs/source/contents/: install.rst  links.rst  lit.rst
examples/: micgeom_sampling_example.py  numeric_attribute_sampling.py  pipeline_example.py  pipeline_writeH5_example.py  point_source_example.py  rir_example.py  set_sample_steering_example.py  sourcemap_evaluation.py
sphinx/: make.bat
sphinx/source/: conf.py  index.rst
sphinx/source/_build/: searchindex.js
sphinx/source/api_ref/: acoupipe.evaluate.rst  acoupipe.sampler.rst  index_apiref.rst
sphinx/source/bib/: refs.bib
sphinx/source/contents/: apidoc.rst  dataset.rst  datasets.rst  documentation.rst  example.rst  (+4 more)
src/acoupipe/: __init__.py  config.py  evaluate.py  filter.py  loader.py  pipeline.py  sampler.py  version.py  writer.py
tests/: array64_d0o686.xml  create_test_values.py  create_validation_data.py  pipeline_value_test.py  run_tests.sh  save_pipeline_to_csv.py  test_data.csv  test_data.h5  test_data_seeds.csv  test_dataset_tf.py  test_datasets.py  test_features.py  test_loader.py  test_random_state.py  test_sampler.py  test_spectra.py  test_writer.py
tests/environment/: build_docker.sh  build_singularity.sh  singularity.def  singularity.recipe
tests/throughput/: download_miracle.sh  log_timing.py  main.py  plot_history.py  run_benchmark.job  run_benchmark.sh  run_benchmark_compute4.sh  run_benchmark_distributed_worker.job
tests/throughput_new/: main.py  run_benchmark_distributed_worker.job
tests/validation_data/: Dataset1_csm.npy  Dataset1_csmtriu.npy  Dataset1_eigmode.npy  Dataset1_loc.npy  Dataset1_p2.npy  Dataset1_sourcemap.npy  Dataset2_csm.npy  Dataset2_csm_wishartFalse_noiseFalse_spectraFalse.npy  Dataset2_csm_wishartFalse_noiseFalse_spectraTrue.npy  Dataset2_csm_wishartFalse_noiseTrue_spectraFalse.npy  Dataset2_csm_wishartFalse_noiseTrue_spectraTrue.npy  Dataset2_csm_wishartTrue_noiseFalse_spectraFalse.npy  Dataset2_csm_wishartTrue_noiseFalse_spectraTrue.npy  Dataset2_csm_wishartTrue_noiseTrue_spectraFalse.npy  Dataset2_csm_wishartTrue_noiseTrue_spectraTrue.npy  Dataset2_csmtriu.npy  Dataset2_csmtriu_wishartFalse_noiseFalse_spectraFalse.npy  Dataset2_csmtriu_wishartFalse_noiseFalse_spectraTrue.npy  Dataset2_csmtriu_wishartFalse_noiseTrue_spectraFalse.npy  Dataset2_csmtriu_wishartFalse_noiseTrue_spectraTrue.npy  Dataset2_csmtriu_wishartTrue_noiseFalse_spectraFalse.npy  Dataset2_csmtriu_wishartTrue_noiseFalse_spectraTrue.npy  Dataset2_csmtriu_wishartTrue_noiseTrue_spectraFalse.npy  Dataset2_csmtriu_wishartTrue_noiseTrue_spectraTrue.npy  Dataset2_eigmode_wishartFalse_noiseFalse_spectraFalse.npy  Dataset2_eigmode_wishartFalse_noiseFalse_spectraTrue.npy  Dataset2_eigmode_wishartFalse_noiseTrue_spectraFalse.npy  Dataset2_eigmode_wishartFalse_noiseTrue_spectraTrue.npy  Dataset2_eigmode_wishartTrue_noiseFalse_spectraFalse.npy  Dataset2_eigmode_wishartTrue_noiseFalse_spectraTrue.npy  Dataset2_eigmode_wishartTrue_noiseTrue_spectraFalse.npy  Dataset2_eigmode_wishartTrue_noiseTrue_spectraTrue.npy  Dataset2_loc.npy  Dataset2_p2.npy  Dataset2_p2_wishartFalse_noiseTrue_spectraFalse.npy  Dataset2_p2_wishartFalse_noiseTrue_spectraTrue.npy  Dataset2_p2_wishartTrue_noiseTrue_spectraTrue.npy  Dataset2_sourcemap.npy  Dataset2_sourcemap_wishartFalse_noiseFalse_spectraFalse.npy  Dataset2_sourcemap_wishartFalse_noiseFalse_spectraTrue.npy  (+159 more)
(+105 files in other folders)
