[project]
name = "acoupipe"
version = "23.1"
description = "Library for sampling large-scale microphone array data with Acoular for machine learning"
readme = "README.rst"
requires-python = ">=3.7,<11"
authors = [
    {name = "Acoular Development Team", email = "info@acoular.org"},
]
license = {file = "LICENSE"}
keywords = [
    "deep learning",
    "beamforming",
    "microphone array"
]
classifiers = [
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3 :: Only"    
]
dependencies = [
	'acoular',
	'ray',
	'h5py',
	'tqdm',
	'parameterized',
]
maintainers = [
    {name = "Adam Kujawski", email = "adam.kujawski@tu-berlin.de"},
    {name = "Art Pelling", email = "a.pelling@tu-berlin.de"},
    {name = "Ennes Sarradj", email = "ennes.sarradj@tu-berlin.de"},
    {name = "Simon Jekosch", email = "s.jekosch@tu-berlin.de"},
]

[project.optional-dependencies]
dev = [
    "tensorflow",
    "ipython",
    "ipykernel",
    "nb-clean",
    "pre-commit",
    "ruff==0.0.260",
    "sphinx",
    "sphinx-autoapi",
    "nbsphinx",
    "sphinx-rtd-theme",
    "sphinx-gallery",
    "sphinxcontrib.bibtex",
]

full = [
    "tensorflow",   
]



[project.urls]
documentation = "https://adku1173.github.io/acoupipe/"
repository = "https://github.com/adku1173/acoupipe"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
src = ["src"]
ignore = [
    "D100", "D101", "D102", "D103", "D105", "D107",
    "D203", "D213", "D206",
    "B905",
    "N806", "N803",
    "E741"]
line-length = 140
select = ["B", "D", "E", "F", "I", "N", "Q", "W"]

[tool.ruff.pydocstyle]
convention = "numpy"
