
[project]
name = "acoupipe"
dynamic = ["version"]
description = "Library for the generation of large-scale microphone array data for machine learning"
requires-python = ">=3.10,<3.13"
authors = [
    {name = "Acoular Development Team", email = "info@acoular.org"},
]
readme = "README.rst"
license = {file = "LICENSE.txt"}
keywords = [
    "acoustics",
    "beamforming",
    "deep learning",
    "machine learning",
    "microphone array",
    "sound source localization",
    "sound source characterization",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
	'acoular',
	'ray[default]',
	'h5py',
	'tqdm',
    'pooch',
]
maintainers = [
    {name = "Adam Kujawski", email = "adam.kujawski@tu-berlin.de"},
    {name = "Art Pelling", email = "a.pelling@tu-berlin.de"},
    {name = "Simon Jekosch", email = "s.jekosch@tu-berlin.de"},
]

[project.optional-dependencies]
full = [
    "tensorflow",
]

docs = [
    "ipython",
    "graphviz",
    "matplotlib",
    "numpydoc",
    "ipykernel",
    "nb-clean",
    "sphinx",
    "sphinx-autoapi",
    "nbsphinx",
    "sphinx-rtd-theme",
    "sphinx-gallery",
    "sphinxcontrib.bibtex",
]

tests = [
    "tensorflow",
    "pytest",
    'pandas',
]

dev = [
    "acoupipe[docs,full,tests]",
    "hatch",
    "ruff",
]


[project.urls]
documentation = "https://adku1173.github.io/acoupipe/"
repository = "https://github.com/adku1173/acoupipe"
source = "https://github.com/adku1173/acoupipe"
tracker = "https://github.com/adku1173/acoupipe/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/acoupipe/version.py"

[tool.hatch.envs.hatch-static-analysis]
dependencies = ["ruff==0.8.1"]

[tool.hatch.envs.docs]
python = "3.13"
dependencies = [
    "acoupipe[docs]"
]

[tool.hatch.envs.docs.scripts]
build = ["cd docs && make html"]


[tool.hatch.envs.tests]
dependencies = [
    "acoupipe[tests]"
]

[[tool.hatch.envs.tests.matrix]]
python = ["3.11", "3.12"]

[tool.hatch.envs.tests.scripts]
import = ["python -c \"import acoupipe\""]
test = ["python -m pytest -v --durations=10 tests"]


[tool.hatch.build.targets.sdist]
include = [
  "/acoupipe",
]

[tool.hatch.build.targets.wheel]
packages = ["src/acoupipe"]

[tool.ruff]
src = ["src"]
ignore = [
    "D100", "D101", "D102", "D103", "D105", "D107",
    "D203", "D213", "D206",
    "B905",
    "N806", "N803",
    "E741"]
line-length = 140
select = ["B", "D", "E", "F", "I", "N", "Q", "W"]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "single"